--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 theme: jekyll-theme-minimal
 title: cestislife's visual guides
 description: A compilation of the guides made by cestislife.
+github:
+  is_project_page: false
