--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 theme: jekyll-theme-minimal
+logo: /img/logo.png
 title: cestislife's visual guides
 description: A compilation of the guides made by cestislife.
 github:
