--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-minimal
 logo: /img/logo.png
 title: cestislife's visual guides
-description: A compilation of the guides made by cestislife.
+description: A compilation of guides made by cestislife.
 github:
   is_project_page: false
