--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,4 @@ title: cestislife's visual guides
 description: A compilation of guides made by cestislife.
 github:
   is_project_page: false
+  is_user_page: false
