--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,4 @@ description: A compilation of guides made by cestislife.
 github:
   is_project_page: false
   is_user_page: false
+markdown: CommonMarkGhPages
